--- a/basic.html
+++ b/basic.html
@@ -16,6 +16,8 @@
                 </section>
 				<section>Slide 1</section>
 				<section>Slide 2</section>
+				<section>Slide 3</section>
+				<section>Slide 4</section>
 			</div>
 		</div>
         <!-- The magic is done by the JavaScript below!-->
