Updated directory structure to match what would be deployed. Fixed up dependency stuff. Came up with code syntax highlighting examples.

--- a/basic.html
+++ b/basic.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-        <title>Basic Reveal Slides</title>
-        <!-- Style and theme selection !-->
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<meta charset="utf-8">
+    <title>Basic Reveal Slides</title>
+    <!-- Style and theme selection !-->
+		<link rel="stylesheet" href="reveal/css/reveal.css">
+		<link rel="stylesheet" href="reveal/css/theme/white.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -18,8 +20,8 @@
 				<section>Slide 2</section>
 			</div>
 		</div>
-        <!-- The magic is done by the JavaScript below!-->
-		<script src="js/reveal.js"></script>
+    <!-- The magic is done by the JavaScript below!-->
+		<script src="reveal/js/reveal.js"></script>
 		<script>
 			Reveal.initialize();
 		</script>
