--- a/LectureSlides/basic.html
+++ b/LectureSlides/basic.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
     <title>Basic Reveal Slides</title>
     <!-- Style and theme selection !-->
-		<link rel="stylesheet" href="reveal/css/reveal.css">
-		<link rel="stylesheet" href="reveal/css/theme/white.css">
+		<link rel="stylesheet" href="../reveal/css/reveal.css">
+		<link rel="stylesheet" href="../reveal/css/theme/white.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -23,7 +23,7 @@
 			</div>
 		</div>
     <!-- The magic is done by the JavaScript below!-->
-		<script src="reveal/js/reveal.js"></script>
+		<script src="../reveal/js/reveal.js"></script>
 		<script>
 			Reveal.initialize();
 		</script>
