--- a/LectureSlides/basicCode.html
+++ b/LectureSlides/basicCode.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
     <title>Basic Reveal Slides with Code Highlights</title>
     <!-- Style and theme selection !-->
-		<link rel="stylesheet" href="reveal/css/reveal.css">
-		<link rel="stylesheet" href="reveal/css/theme/white.css">
+		<link rel="stylesheet" href="../reveal/css/reveal.css">
+		<link rel="stylesheet" href="../reveal/css/theme/white.css">
 		<!-- Code Syntax Highlighting Stylesheet -->
-		<link rel="stylesheet" href="reveal/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
 	</head>
 	<body>
 		<div class="reveal">
@@ -74,12 +74,12 @@ body {
 		</div>
 
         <!-- The magic is done by the JavaScript below!-->
-		<script src="reveal/lib/js/head.min.js"></script>
-		<script src="reveal/js/reveal.js"></script>
+		<script src="../reveal/lib/js/head.min.js"></script>
+		<script src="../reveal/js/reveal.js"></script>
 		<script>
 			Reveal.initialize({
 				dependencies: [
-					{ src: 'reveal/js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 				]});
 		</script>
 	</body>
