--- a/LectureSlides/basicMarkdown.html
+++ b/LectureSlides/basicMarkdown.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
         <title>Basic Markdown with Reveal</title>
         <!-- Style and theme selection !-->
-		<link rel="stylesheet" href="reveal/css/reveal.css">
-		<link rel="stylesheet" href="reveal/css/theme/white.css">
+		<link rel="stylesheet" href="../reveal/css/reveal.css">
+		<link rel="stylesheet" href="../reveal/css/theme/white.css">
 
 	</head>
 	<body>
@@ -36,15 +36,15 @@
 			</div>
 		</div>
     <!-- The first of these scripts helps reveal load the plugin scripts !-->
-		<script src="reveal/lib/js/head.min.js"></script>
-		<script src="reveal/js/reveal.js"></script>
+		<script src="../reveal/lib/js/head.min.js"></script>
+		<script src="../reveal/js/reveal.js"></script>
 		<script>
 		  /* You can specify Reveal options below. */
 			Reveal.initialize(
 				{
 				dependencies: [
-					{ src: 'reveal/js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'reveal/js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 				]
 			}
 			);
